--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 p {
-  font-size: 24px;
+  font-size: 48px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: underline;
+
 }
