--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
 p {
-  font-size: 48px;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: bold;
-  font-style: italic;
-  text-decoration: underline;
-
+ font: small-caps 12px/16px Arial, Helvetica, sans-serif;
 }
