--- a/blog-prac/blog-css/blog-index-styles.css
+++ b/blog-prac/blog-css/blog-index-styles.css
@@ -2,11 +2,12 @@
  display: grid;
  grid-template-columns: 300px 300px 300px;
  grid-template-rows: 250px 600px;
- grid-template-areas:
- "hd hd hd hd hd hd hd hd"
- "sd sd main main main main main main"
- "ft ft ft ft ft ft ft ft";
  border: 7px solid black;
+ grid-template-areas:
+ "hd"
+ "sd"
+ "main"
+ "ft";
 }
 
 .box {
@@ -29,3 +30,4 @@
 .footer {
  grid-area: ft;
 }
+
