add media query 900px

--- a/blog-prac/blog-css/blog-index-styles.css
+++ b/blog-prac/blog-css/blog-index-styles.css
@@ -31,3 +31,16 @@
  grid-area: ft;
 }
 
+/* if screen is wide enough */
+@media (min-width: 900px) {
+ .container {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 250px 600px;
+  grid-template-areas:
+  "hd hd hd hd hd hd hd hd"
+  "sd sd main main main main main main"
+  "ft ft ft ft ft ft ft ft";
+  border: 2px solid black;
+ }
+}
