--- a/nestedgrid/nestedgridcss/nestedgridstyles.css
+++ b/nestedgrid/nestedgridcss/nestedgridstyles.css
@@ -3,10 +3,21 @@
  grid-template-columns: 300px 300px 300px;
  grid-template-rows: 250px 600px;
  grid-template-areas:
- "hd hd hd hd hd hd hd hd"
- "sd sd main main main main main main"
- "ft ft ft ft ft ft ft ft";
- border: 7px solid black;
+ "hd"
+ "sd"
+ "main"
+ "ft";
+ border: 2px solid black;
+}
+
+.nestedGrid{
+ display: grid;
+ grid-template-columns: 50% 50%;
+ grid-template-rows: 50% 50%;
+}
+
+.nestedGrid > * {
+ border: 2px solid silver;
 }
 
 .box {
@@ -18,6 +29,10 @@
  grid-area: hd;
 }
 
+.footer {
+ grid-area: ft;
+}
+
 .sidebar {
  grid-area: sd;
 }
@@ -26,6 +41,17 @@
  grid-area: main;
 }
 
-.footer {
- grid-area: ft;
+
+/* if screen is wide enough */
+@media (min-width: 900px) {
+ .container {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 250px 600px;
+  grid-template-areas:
+   "hd hd hd hd hd hd hd hd"
+   "sd sd main main main main main main"
+   "ft ft ft ft ft ft ft ft";
+   border: 2px solid black;
+ }
 }
