--- a/nestedgrid/nestedgridcss/nestedgridstyles.css
+++ b/nestedgrid/nestedgridcss/nestedgridstyles.css
@@ -1,57 +1,55 @@
-.container{
- display: grid;
- grid-template-columns: 300px 300px 300px;
- grid-template-rows: 250px 600px;
- grid-template-areas:
- "hd"
- "sd"
- "main"
- "ft";
- border: 2px solid black;
-}
-
-.nestedGrid{
- display: grid;
- grid-template-columns: 50% 50%;
- grid-template-rows: 50% 50%;
-}
-
-.nestedGrid > * {
- border: 2px solid silver;
-}
-
-.box {
- border: 1px solid silver;
- background: goldenrod;
-}
-
-.header {
- grid-area: hd;
-}
-
-.footer {
- grid-area: ft;
-}
-
-.sidebar {
- grid-area: sd;
-}
-
-.content {
- grid-area: main;
-}
-
-
-/* if screen is wide enough */
-@media (min-width: 900px) {
- .container {
+.container {
   display: grid;
   grid-template-columns: 300px 300px 300px;
   grid-template-rows: 250px 600px;
   grid-template-areas:
-   "hd hd hd hd hd hd hd hd"
-   "sd sd main main main main main main"
-   "ft ft ft ft ft ft ft ft";
-   border: 2px solid black;
- }
+    "hd"
+    "sd"
+    "main"
+    "ft";
+  border: 2px solid yellow;
+}
+
+.nestedGrid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+}
+.nestedGrid > * {
+  border: 2px solid aquamarine;
+}
+
+.box {
+  border: 1px solid red;
+  background: goldenrod;
+}
+
+.header {
+  grid-area: hd;
+}
+
+.footer {
+  grid-area: ft;
+}
+
+.sidebar {
+  grid-area: sd;
+}
+
+.content {
+  grid-area: main;
+}
+
+/* if screen is wide enough */
+@media (min-width: 900px) {
+  .container {
+    display: grid;
+    grid-template-columns: 300px 300px 300px;
+    grid-template-rows: 250px 600px;
+    grid-template-areas:
+      "hd hd hd hd hd hd hd hd"
+      "sd sd main main main main main main"
+      "ft ft ft ft ft ft ft ft";
+    border: 2px solid red;
+  }
 }
